--- a/package.json
+++ b/package.json
@@ -48,5 +48,6 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25"
-  }
+  },
+  "proxy": "http://localhost:8900"
 }
